// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ReactComponentsGenerator Create component generation should match snapshot 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Comment
 */

import React from 'react';
import { BooleanInput, Create, SimpleForm, TextInput } from '@/components/admin';

export const CommentCreate: React.FC = () => (
  <Create>
    <SimpleForm>
      <TextInput source="content" />
      <BooleanInput source="published" />
    </SimpleForm>
  </Create>
);
"
`;

exports[`ReactComponentsGenerator Edit component generation should match snapshot 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Task
 */

import React from 'react';
import { BooleanInput, DateTimeInput, Edit, SimpleForm, TextInput } from '@/components/admin';

export const TaskEdit: React.FC = () => (
  <Edit>
    <SimpleForm>
      <TextInput source="title" />
      <BooleanInput source="completed" />
      <DateTimeInput source="dueDate" />
    </SimpleForm>
  </Edit>
);
"
`;

exports[`ReactComponentsGenerator List component generation should match snapshot 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Project
 */

import React from 'react';
import { DataTable, List, TextField } from '@/components/admin';
import { Link } from 'react-router-dom';
import { Button } from '@/components/ui/button';

export const ProjectList: React.FC = () => (
 <List>
   <div className="mb-2 flex justify-end">
     <Link to="/projects/studio">
       <Button variant="outline">Studio</Button>
     </Link>
   </div>
   <DataTable>
<DataTable.Col source="title">
      <TextField source="title" />
    </DataTable.Col>
<DataTable.Col source="description">
      <TextField source="description" />
    </DataTable.Col>
<DataTable.Col source="status">
      <TextField source="status" />
    </DataTable.Col>
     </DataTable>
   </List>
 );
 "
`;

exports[`ReactComponentsGenerator Show component generation should match snapshot 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Invoice
 */

import React from 'react';
import { BooleanField, DateField, NumberField, RecordField, Show, SimpleShowLayout, TextField } from '@/components/admin';

export const InvoiceShow: React.FC = () => (
  <Show>
    <SimpleShowLayout>
      <RecordField source="number">
        <TextField source="number" />
      </RecordField>
      <RecordField source="amount">
        <NumberField source="amount" />
      </RecordField>
      <RecordField source="paid">
        <BooleanField source="paid" />
      </RecordField>
      <RecordField source="createdAt">
        <DateField source="createdAt" showTime={true} />
      </RecordField>
    </SimpleShowLayout>
  </Show>
);
"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 1`] = `
"      <ReferenceInput source="authorId" reference="users">
        <AutocompleteInput optionText="name" />
      </ReferenceInput>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 2`] = `"      <SelectInput source="status" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }, { id: 'PENDING', name: 'PENDING' }]} />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 3`] = `"      <BooleanInput source="active" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 4`] = `"      <NumberInput source="age" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 5`] = `"      <DateTimeInput source="createdAt" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 6`] = `"      <JsonInput source="metadata" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 7`] = `"      <FileInput source="attachment" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 8`] = `"      <UrlInput source="website" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 9`] = `"      <TextInput source="email" type="email" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 10`] = `"      <TextInput source="password" type="password" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 11`] = `"      <TextInput source="phone" type="tel" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 12`] = `"      <FileInput source="file" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all form field configs 13`] = `"      <TextInput source="name" />"`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 1`] = `
"<DataTable.Col source="authorId">
          <ReferenceField source="authorId" reference="users">
            <TextField source="name" />
          </ReferenceField>
        </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 2`] = `
"<DataTable.Col source="status">
      <SelectField source="status" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }]} />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 3`] = `
"<DataTable.Col source="createdAt">
      <DateField source="createdAt" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 4`] = `
"<DataTable.Col source="active">
      <BooleanField source="active" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 5`] = `
"<DataTable.Col source="age">
      <NumberField source="age" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 6`] = `
"<DataTable.Col source="metadata">
      <JsonField source="metadata" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 7`] = `
"<DataTable.Col source="attachment">
      <FileField source="attachment" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 8`] = `
"<DataTable.Col source="website">
      <UrlField source="website" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all list field configs 9`] = `
"<DataTable.Col source="name">
      <TextField source="name" />
    </DataTable.Col>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 1`] = `
"      <RecordField source="author">
        <ReferenceField source="author" reference="users" link="show" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 2`] = `
"      <RecordField source="status">
        <SelectField source="status" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }]} />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 3`] = `
"      <RecordField source="createdAt">
        <DateField source="createdAt" showTime={true} />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 4`] = `
"      <RecordField source="active">
        <BooleanField source="active" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 5`] = `
"      <RecordField source="age">
        <NumberField source="age" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 6`] = `
"      <RecordField source="metadata">
        <JsonField source="metadata" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 7`] = `
"      <RecordField source="attachment">
        <FileField source="attachment" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 8`] = `
"      <RecordField source="website">
        <UrlField source="website" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Component field config snapshots should snapshot all show field configs 9`] = `
"      <RecordField source="name">
        <TextField source="name" />
      </RecordField>"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Create component snapshots should snapshot Create component with all field types 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: ComprehensiveCreate
 */

import React from 'react';
import { BooleanInput, Create, DateTimeInput, FileInput, JsonInput, NumberInput, SelectInput, SimpleForm, TextInput, UrlInput } from '@/components/admin';

export const ComprehensiveCreateCreate: React.FC = () => (
  <Create>
    <SimpleForm>
      <TextInput source="stringField" />
      <BooleanInput source="booleanField" />
      <NumberInput source="intField" />
      <NumberInput source="floatField" />
      <NumberInput source="decimalField" />
      <NumberInput source="bigIntField" />
      <DateTimeInput source="dateTimeField" />
      <JsonInput source="jsonField" />
      <FileInput source="bytesField" />
      <UrlInput source="urlField" />
      <TextInput source="emailField" type="email" />
      <TextInput source="passwordField" type="password" />
      <TextInput source="telField" type="tel" />
      <FileInput source="uploadField" />
      <SelectInput source="enumField" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }]} />
    </SimpleForm>
  </Create>
);
"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Edit component snapshots should snapshot Edit component with all field types 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Comprehensive
 */

import React from 'react';
import { BooleanInput, DateTimeInput, Edit, FileInput, JsonInput, NumberInput, SelectInput, SimpleForm, TextInput, UrlInput } from '@/components/admin';

export const ComprehensiveEdit: React.FC = () => (
  <Edit>
    <SimpleForm>
      <TextInput source="stringField" />
      <BooleanInput source="booleanField" />
      <NumberInput source="intField" />
      <NumberInput source="floatField" />
      <NumberInput source="decimalField" />
      <NumberInput source="bigIntField" />
      <DateTimeInput source="dateTimeField" />
      <JsonInput source="jsonField" />
      <FileInput source="bytesField" />
      <UrlInput source="urlField" />
      <TextInput source="emailField" type="email" />
      <TextInput source="passwordField" type="password" />
      <TextInput source="telField" type="tel" />
      <FileInput source="uploadField" />
      <SelectInput source="enumField" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }]} />
    </SimpleForm>
  </Edit>
);
"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Edit component snapshots should snapshot Edit component with relation fields 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Post
 */

import React from 'react';
import { AutocompleteArrayInput, AutocompleteInput, Edit, ReferenceArrayInput, ReferenceInput, SimpleForm, TextInput } from '@/components/admin';

export const PostEdit: React.FC = () => (
  <Edit>
    <SimpleForm>
      <TextInput source="title" />
      <ReferenceInput source="authorId" reference="users">
        <AutocompleteInput optionText="name" />
      </ReferenceInput>
      <ReferenceInput source="categoryId" reference="categories">
        <AutocompleteInput optionText="name" />
      </ReferenceInput>
    </SimpleForm>
  </Edit>
);
"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage List component snapshots should snapshot List component with all field types 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: ComprehensiveList
 */

import React from 'react';
import { BooleanField, DataTable, DateField, FileField, JsonField, List, NumberField, SelectField, TextField, UrlField } from '@/components/admin';
import { Link } from 'react-router-dom';
import { Button } from '@/components/ui/button';

export const ComprehensiveListList: React.FC = () => (
 <List>
   <div className="mb-2 flex justify-end">
     <Link to="/comprehensive-lists/studio">
       <Button variant="outline">Studio</Button>
     </Link>
   </div>
   <DataTable>
<DataTable.Col source="stringField">
      <TextField source="stringField" />
    </DataTable.Col>
<DataTable.Col source="booleanField">
      <BooleanField source="booleanField" />
    </DataTable.Col>
<DataTable.Col source="intField">
      <NumberField source="intField" />
    </DataTable.Col>
<DataTable.Col source="floatField">
      <NumberField source="floatField" />
    </DataTable.Col>
<DataTable.Col source="decimalField">
      <NumberField source="decimalField" />
    </DataTable.Col>
<DataTable.Col source="bigIntField">
      <NumberField source="bigIntField" />
    </DataTable.Col>
<DataTable.Col source="dateTimeField">
      <DateField source="dateTimeField" />
    </DataTable.Col>
<DataTable.Col source="jsonField">
      <JsonField source="jsonField" />
    </DataTable.Col>
<DataTable.Col source="bytesField">
      <FileField source="bytesField" />
    </DataTable.Col>
<DataTable.Col source="urlField">
      <UrlField source="urlField" />
    </DataTable.Col>
<DataTable.Col source="enumField">
      <SelectField source="enumField" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }]} />
    </DataTable.Col>
     </DataTable>
   </List>
 );
 "
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage List component snapshots should snapshot List component with relation fields 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Post
 */

import React from 'react';
import { DataTable, List, TextField } from '@/components/admin';
import { Link } from 'react-router-dom';
import { Button } from '@/components/ui/button';

export const PostList: React.FC = () => (
 <List>
   <div className="mb-2 flex justify-end">
     <Link to="/posts/studio">
       <Button variant="outline">Studio</Button>
     </Link>
   </div>
   <DataTable>
<DataTable.Col source="title">
      <TextField source="title" />
    </DataTable.Col>
     </DataTable>
   </List>
 );
 "
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Show component snapshots should snapshot Show component with all field types 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: ComprehensiveShow
 */

import React from 'react';
import { BooleanField, DateField, FileField, JsonField, NumberField, RecordField, SelectField, Show, SimpleShowLayout, TextField, UrlField } from '@/components/admin';

export const ComprehensiveShowShow: React.FC = () => (
  <Show>
    <SimpleShowLayout>
      <RecordField source="id">
        <TextField source="id" />
      </RecordField>
      <RecordField source="stringField">
        <TextField source="stringField" />
      </RecordField>
      <RecordField source="booleanField">
        <BooleanField source="booleanField" />
      </RecordField>
      <RecordField source="intField">
        <NumberField source="intField" />
      </RecordField>
      <RecordField source="floatField">
        <NumberField source="floatField" />
      </RecordField>
      <RecordField source="decimalField">
        <NumberField source="decimalField" />
      </RecordField>
      <RecordField source="bigIntField">
        <NumberField source="bigIntField" />
      </RecordField>
      <RecordField source="dateTimeField">
        <DateField source="dateTimeField" showTime={true} />
      </RecordField>
      <RecordField source="jsonField">
        <JsonField source="jsonField" />
      </RecordField>
      <RecordField source="bytesField">
        <FileField source="bytesField" />
      </RecordField>
      <RecordField source="urlField">
        <UrlField source="urlField" />
      </RecordField>
      <RecordField source="enumField">
        <SelectField source="enumField" choices={[{ id: 'ACTIVE', name: 'ACTIVE' }, { id: 'INACTIVE', name: 'INACTIVE' }]} />
      </RecordField>
      <RecordField source="createdAt">
        <DateField source="createdAt" showTime={true} />
      </RecordField>
      <RecordField source="updatedAt">
        <DateField source="updatedAt" showTime={true} />
      </RecordField>
    </SimpleShowLayout>
  </Show>
);
"
`;

exports[`ReactComponentsGenerator Snapshot tests - comprehensive field type coverage Show component snapshots should snapshot Show component with relation fields 1`] = `
"/**
 * AUTO-GENERATED FILE
 * This file was automatically generated by the ReactComponentsGenerator generator.
 * Do not edit this file manually. Instead, modify the Prisma schema and regenerate.
 * Generated from model: Post
 */

import React from 'react';
import { RecordField, ReferenceField, Show, SimpleShowLayout, TextField } from '@/components/admin';

export const PostShow: React.FC = () => (
  <Show>
    <SimpleShowLayout>
      <RecordField source="id">
        <TextField source="id" />
      </RecordField>
      <RecordField source="title">
        <TextField source="title" />
      </RecordField>
      <RecordField source="author">
        <ReferenceField source="author" reference="users" link="show" />
      </RecordField>
      <RecordField source="category">
        <ReferenceField source="category" reference="categories" link="show" />
      </RecordField>
    </SimpleShowLayout>
  </Show>
);
"
`;

exports[`ReactComponentsGenerator index page generation should match snapshot 1`] = `
"export { ArticleList } from './ArticleList';
export { ArticleEdit } from './ArticleEdit';
export { ArticleCreate } from './ArticleCreate';
export { ArticleShow } from './ArticleShow';
export { ArticleStudio } from './ArticleStudio';
"
`;
